# CodeReviewAI

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
codereviewai/: config.py  main.py  static.py
codereviewai/api/: index.py  review.py
codereviewai/services/: github_service.py  openai_service.py
tests/: request_test_content.py  test_config.py  test_github_service.py  test_index.py  test_openai_service.py
